--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,9 @@
 {
     "name": "magmamedia/random-string-generator",
-    "description": "generate a random string",
+    "type": "library",
+    "description": "PHP string class",
+    "keywords": ["string"],
+    "homepage": "https://github.com/billy124/random-string-generator",
     "license": "Apache License Version 2.0",
     "authors": [
         {
@@ -8,6 +11,9 @@
             "email": "billy124@msn.com"
         }
     ],
+    "require": {
+        "php": ">=5.3.0"
+    },
     "autoload": {
         "psr-0" : {
             "Magmamedia\\StringZone" : "src"
